# naoqi_bridge_msgs2

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: Blink.action  Listen.action
msg/: AudioBuffer.msg  Bumper.msg  EventStamped.msg  FadeRGB.msg  HandTouch.msg  HeadTouch.msg  IntArrayStamped.msg  JointAngleTrajectory.msg  JointAnglesWithSpeed.msg  MemoryList.msg  MemoryPairFloat.msg  MemoryPairInt.msg  MemoryPairString.msg  PoseWithConfidenceStamped.msg  SoundLocated.msg  StatusChangeStamped.msg
