<?xml version="1.0"?>
<package format="3">
  <name>naoqi_bridge_msgs</name>
  <version>2.1.0</version>
  <description>The naoqi_bridge_msgs package provides custom messages for running Aldebaran's robots in ROS2.</description>

  <author>Maxime Busy</author>
  <maintainer email="victor.paleologue@palaio.eu">Victor Paléologue</maintainer>
  <maintainer email="mbusy@softbankrobotics.com">Maxime Busy</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <replace>naoqi_msgs</replace>
  <conflict>naoqi_msgs</conflict>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
